# GaussianRenderer

./: .gitignore  CMakeLists.txt  README.md  results.txt  test.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/cuda/: CMakeLists.txt  cub_sort.cu  math.cu  math.cuh  misc.cu  misc.cuh  onesweep.cu  onesweep.cuh  render.cu  render.cuh  test.cu
src/core/math/: CMakeLists.txt  math.cpp  math.hpp
src/core/render/: CMakeLists.txt  canvas.cpp  canvas.hpp  render.cpp  render.hpp
src/core/scene/: CMakeLists.txt  camera.cpp  camera.hpp
src/core/utils/: CMakeLists.txt  gaussians.cpp  gaussians.hpp
src/core/viewer/: CMakeLists.txt  window.cpp  window.hpp
src/projects/test/: CMakeLists.txt  camera_test.cpp  cull_sort_test.cpp  matrix_test.cpp  onesweep.cpp  parser_test.cpp  radix_test.cpp  window_test.cpp
